--- a/src/plugins/core/loupedeckct/prefs/html/panel.html
+++ b/src/plugins/core/loupedeckct/prefs/html/panel.html
@@ -465,7 +465,7 @@
 							selected = [[selected=""]]
 						end
 					%}
-					<option disabled {{selected}} value="{{i}}_LeftFn">{{i}} (Left Fn)</option>
+					<option {{selected}} value="{{i}}_LeftFn">{{i}} (Left Fn)</option>
 					{% end %}
 					<option disabled>──────────</option>
 					{%
@@ -475,7 +475,7 @@
 							selected = [[selected=""]]
 						end
 					%}
-					<option disabled {{selected}} value="{{i}}_RightFn">{{i}} (Right Fn)</option>
+					<option {{selected}} value="{{i}}_RightFn">{{i}} (Right Fn)</option>
 					{% end %}
 				</select>
 			</span>
