--- a/src/plugins/core/loupedeckct/prefs/html/panel.html
+++ b/src/plugins/core/loupedeckct/prefs/html/panel.html
@@ -549,8 +549,8 @@
 
 						<!-- TOUCH WHEEL UP & DOWN : -->
 						<tr id="touchWheelA">
-							<th width="229px">Push Up Action:</th>
-							<th width="229px">Push Down Action:</th>
+							<th width="229px">Slide Up Action:</th>
+							<th width="229px">Slide Down Action:</th>
 						</tr>
 						<tr id="touchWheelB">
 							<td width="229px"><input type="text" id="up_touch_action" class="loupedeckActionTextbox" value="{{ lastTouchUpValue }}" disabled="" placeholder="{{ i18n("none") }}"></td>
@@ -570,8 +570,8 @@
 
 						<!-- TOUCH WHEEL LEFT & RIGHT : -->
 						<tr id="touchWheelD">
-							<th width="229px">Push Left Action:</th>
-							<th width="229px">Push Right Action:</th>
+							<th width="229px">Slide Left Action:</th>
+							<th width="229px">Slide Right Action:</th>
 						</tr>
 						<tr id="touchWheelE">
 							<td width="229px"><input type="text" id="left_touch_action" class="loupedeckActionTextbox" value="{{ lastTouchLeftValue }}" disabled="" placeholder="{{ i18n("none") }}"></td>
